--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/qs": "^6.9.7",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "negotiator": "^0.6.3",
     "next": "13.4.5",
